--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "co-writer",
+  "name": "nextjs-him-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^7.7.1",
     "@mantine/hooks": "^7.7.1",
+    "@tabler/icons-react": "^3.3.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
